--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,13 @@
         android:theme="@style/Theme.GJB_IDK2"
         tools:targetApi="31">
         <activity
+            android:name=".SignUpActivity"
+            android:exported="false" >
+        </activity>
+        <activity
+            android:name=".LoginActivity"
+            android:exported="false"/>
+        <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
